adding db.json and base api

--- a/views/instructor/instructors.html
+++ b/views/instructor/instructors.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instructores</title>
     <link rel="stylesheet" href="./instructores.css">
+    <script type="module" src="../../api/main.js"></script>
 </head>
 
 <body>
@@ -43,6 +44,8 @@
                 <p>Mariana es una facilitadora de talleres de autoconocimiento...</p>
             </div>
         </div>
+
+        <button id="fetchUserById">fetch users</button>
     </div>
 </body>
 
