--- a/frontend_poli-main/views/instructor/instructors.html
+++ b/frontend_poli-main/views/instructor/instructors.html
@@ -10,8 +10,20 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../courses/cursos.html">Nuestros Cursos</a></li>
+                <li><a href="./instructors.html">Instructores</a></li>
+                <li><a href="#">Testimonios</a></li>
+                <li><a href="#">Registrate</a></li>
+                <li><a href="#">Inicio de sesion</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="contenedor-principal">
-        <h1>INSTRUCTORES</h1>
+        <h1>Instructores</h1>
         <div class="instructores">
             <div class="instructor">
                 <img src="../../img/profeyoga.jpg" alt="Isabella Ríos">
