--- a/frontend_poli-main/views/instructor/instructors.html
+++ b/frontend_poli-main/views/instructor/instructors.html
@@ -14,16 +14,19 @@
         <nav>
             <ul>
                 <li><a href="../../index.html">Inicio</a></li>
-                <li><a href="../courses/cursos.html">Nuestros Cursos</a></li>
+                <li><a href="../courses/cursos.html">Nuestros cursos</a></li>
                 <li><a href="./instructors.html">Instructores</a></li>
-                <li><a href="#">Testimonios</a></li>
+                <li><a href="../testimonios/testimonios.html">Testimonios</a></li>
                 <li><a href="#">Registrate</a></li>
                 <li><a href="#">Inicio de sesion</a></li>
             </ul>
         </nav>
     </header>
     <div class="contenedor-principal">
-        <h1>Instructores</h1>
+        <section class="hero">
+            <h1>Nuestros instructores</h1>
+            <p>Descubre los mejores instructores para tu bienestar</p>
+        </section>
         <div class="instructores">
             <div class="instructor">
                 <img src="../../img/profeyoga.jpg" alt="Isabella Ríos">
