--- a/frontend_poli-main/views/courses/cursos.html
+++ b/frontend_poli-main/views/courses/cursos.html
@@ -14,7 +14,7 @@
                     <li><a href="../../index.html">Inicio</a></li>
                     <li><a href="./cursos.html">Nuestros cursos</a></li>
                     <li><a href="../instructor/instructors.html">Instructores</a></li>
-                    <li><a href="#">Testimonios</a></li>
+                    <li><a href="../testimonios/testimonios.html">Testimonios</a></li>
                     <li><a href="#">Registrate</a></li>
                     <li><a href="#">Inicio de sesion</a></li>
                 </ul>
