Modulos registro e inicio de sesion

--- a/frontend_poli-main/views/courses/cursos.html
+++ b/frontend_poli-main/views/courses/cursos.html
@@ -15,8 +15,8 @@
                     <li><a href="./cursos.html">Nuestros cursos</a></li>
                     <li><a href="../instructor/instructors.html">Instructores</a></li>
                     <li><a href="../testimonios/testimonios.html">Testimonios</a></li>
-                    <li><a href="#">Registrate</a></li>
-                    <li><a href="#">Inicio de sesion</a></li>
+                    <li><a href="../registro/registro.html">Registrate</a></li>
+                    <li><a href="../iniciosesion/iniciosesion.html">Inicio de sesion</a></li>
                 </ul>
             </nav>
     </header>
