--- a/frontend_poli-main/views/instructor/instructors.html
+++ b/frontend_poli-main/views/instructor/instructors.html
@@ -17,8 +17,8 @@
                 <li><a href="../courses/cursos.html">Nuestros cursos</a></li>
                 <li><a href="./instructors.html">Instructores</a></li>
                 <li><a href="../testimonios/testimonios.html">Testimonios</a></li>
-                <li><a href="#">Registrate</a></li>
-                <li><a href="#">Inicio de sesion</a></li>
+                <li><a href="../registro/registro.html">Registrate</a></li>
+                <li><a href="../iniciosesion/iniciosesion.html">Inicio de sesion</a></li>
             </ul>
         </nav>
     </header>
