--- a/frontend_poli-main/views/testimonios/testimonios.html
+++ b/frontend_poli-main/views/testimonios/testimonios.html
@@ -14,8 +14,8 @@
                 <li><a href="../courses/cursos.html">Nuestros cursos</a></li>
                 <li><a href="../instructor/instructors.html">Instructores</a></li>
                 <li><a href="./testimonios.html">Testimonios</a></li>
-                <li><a href="#">Registrate</a></li>
-                <li><a href="#">Inicio de sesión</a></li>
+                <li><a href="..//registro/registro.html">Registrate</a></li>
+                <li><a href="../iniciosesion/iniciosesion.html">Inicio de sesión</a></li>
             </ul>
         </nav>
     </header>
