--- a/views/instructor/instructors.html
+++ b/views/instructor/instructors.html
@@ -10,42 +10,59 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../../index.html">Inicio</a></li>
+                <li><a href="../courses/cursos.html">Nuestros cursos</a></li>
+                <li><a href="./instructors.html">Instructores</a></li>
+                <li><a href="../testimonios/testimonios.html">Testimonios</a></li>
+                <li><a href="../registro/registro.html">Registrate</a></li>
+                <li><a href="../iniciosesion/iniciosesion.html">Inicio de sesion</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="contenedor-principal">
-        <h1>INSTRUCTORES</h1>
+        <section class="hero">
+            <h1>Nuestros instructores</h1>
+            <p>Descubre los mejores instructores para tu bienestar</p>
+        </section>
         <div class="instructores">
             <div class="instructor">
-                <img src="profeyoga.jpg" alt="Isabella Ríos">
+                <img src="../../img/profeyoga.jpg" alt="Isabella Ríos">
                 <h2>Isabella Ríos</h2>
                 <p>Isabella es una instructora de yoga apasionada...</p>
             </div>
             <div class="instructor">
-                <img src="sofia.jpg" alt="Sofía Mendoza">
+                <img src="../../img/profeyoga3.jpg" alt="Sofía Mendoza">
                 <h2>Sofía Mendoza</h2>
                 <p>Sofia guía meditaciones mindfulness y de atención plena...</p>
             </div>
             <div class="instructor">
-                <img src="profecocinasaludable.jpg" alt="Daniela Rivas">
+                <img src="../../img/profeyoga2.jpg" alt="Daniela Rivas">
                 <h2>Daniela Rivas</h2>
                 <p>Daniela es especialista en alimentación consciente...</p>
             </div>
             <div class="instructor">
-                <img src="profefitness.webp" alt="Javier Morales">
+                <img src="../../img/profeyoga4.jpg" alt="Javier Morales">
                 <h2>Javier Morales</h2>
                 <p>Javier es un entrenador personal certificado...</p>
             </div>
             <div class="instructor">
-                <img src="profegestion estres.jpg" alt="Ricardo Jiménez">
+                <img src="../../img/profeyoga5.jpg" alt="Ricardo Jiménez">
                 <h2>Ricardo Jiménez</h2>
                 <p>Ricardo es un terapeuta y coach especializado...</p>
             </div>
             <div class="instructor">
-                <img src="profeautoconciencia.jpg" alt="Mariana Herrera">
+                <img src="../../img/profeyoga6.jpg" alt="Mariana Herrera">
                 <h2>Mariana Herrera</h2>
                 <p>Mariana es una facilitadora de talleres de autoconocimiento...</p>
             </div>
         </div>
 
-        <button id="fetchUserById">fetch users</button>
+        <a href="../../index.html">
+            <button id="Ir al inicio">Ir al Inicio</button>
+        </a>
     </div>
 </body>
 
