--- a/views/courses/cursos.html
+++ b/views/courses/cursos.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./cursos.css">
     <title>Nuestros Cursos</title>
 </head>
+    <!-- Codigo pagina de cursos con html -->
 <body>
     <header>
         <nav>
